// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stegvisning - AFP - født før 1963 og og fylt 67 år, eller født før 1963 og har vedtak om alderspensjon > rendrer slik den skal når afp er oppgitt 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
    data-testid="afp-privat"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.afpPrivat.title
      </h2>
      <p
        class="navds-body-long navds-body-long--large"
      >
        stegvisning.afp.ingress
      </p>
      <div
        class="navds-read-more navds-read-more--medium _readmorePrivat_10a2c6"
        data-volume="low"
      >
        <button
          aria-expanded="false"
          class="navds-read-more__button navds-body-short"
          data-state="closed"
          data-testid="readmore"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            stegvisning.afp.readmore_privat_title
          </span>
        </button>
        <div
          aria-hidden="true"
          class="navds-read-more__content navds-read-more__content--closed navds-body-long navds-body-long--medium"
          data-state="closed"
        >
          stegvisning.afp.readmore_privat_list_title
          <ul
            class="_list_10a2c6"
          >
            <li>
              stegvisning.afp.readmore_privat_list_item1
            </li>
            <li>
              stegvisning.afp.readmore_privat_list_item2
            </li>
            <li>
              stegvisning.afp.readmore_privat_list_item3
            </li>
            <li>
              stegvisning.afp.readmore_privat_list_item4
            </li>
          </ul>
          Enkelte arbeidsgivere i privat sektor kan ha avtaler i offentlig sektor. Sjekk hos arbeidsgiveren din hva som gjelder for deg. Les om vilkårene til 
          <a
            class="navds-link navds-link--action navds-link--inline-text"
            href="https://www.afp.no"
            target="_blank"
          >
            AFP i privat sektor på afp.no
            <svg
              aria-labelledby="title-rb"
              fill="none"
              focusable="false"
              height="1.25rem"
              role="img"
              viewBox="0 0 24 24"
              width="1.25rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rb"
              >
                application.global.external_link
              </title>
              <path
                clip-rule="evenodd"
                d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </div>
      </div>
      <fieldset
        aria-required="true"
        class="_radiogroup_10a2c6 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.afpPrivat.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="rf"
              class="navds-radio__input"
              id="radio-re"
              name="afp"
              type="radio"
              value="ja_privat"
            />
            <label
              class="navds-radio__label"
              for="radio-re"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="rf"
                >
                  stegvisning.radio_ja
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="ri"
              checked=""
              class="navds-radio__input"
              id="radio-rh"
              name="afp"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-rh"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="ri"
                >
                  stegvisning.radio_nei
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-rd"
        />
      </fieldset>
      <button
        class="_button_10a2c6 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - AFP - født før 1963 og og fylt 67 år, eller født før 1963 og har vedtak om alderspensjon > rendrer slik den skal når afp ikke er oppgitt 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
    data-testid="afp-privat"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.afpPrivat.title
      </h2>
      <p
        class="navds-body-long navds-body-long--large"
      >
        stegvisning.afp.ingress
      </p>
      <div
        class="navds-read-more navds-read-more--medium _readmorePrivat_10a2c6 navds-read-more--open"
        data-volume="low"
      >
        <button
          aria-expanded="true"
          class="navds-read-more__button navds-body-short"
          data-state="open"
          data-testid="om_livsvarig_AFP_i_privat_sektor"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Om livsvarig AFP i privat sektor
          </span>
        </button>
        <div
          aria-hidden="false"
          class="navds-read-more__content navds-body-long navds-body-long--medium"
          data-state="open"
        >
          <p>
            Lorem
          </p>
        </div>
      </div>
      <fieldset
        aria-required="true"
        class="_radiogroup_10a2c6 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.afpPrivat.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r5"
              class="navds-radio__input"
              id="radio-r4"
              name="afp"
              type="radio"
              value="ja_privat"
            />
            <label
              class="navds-radio__label"
              for="radio-r4"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r5"
                >
                  stegvisning.radio_ja
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r8"
              class="navds-radio__input"
              id="radio-r7"
              name="afp"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-r7"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r8"
                >
                  stegvisning.radio_nei
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r3"
        />
      </fieldset>
      <button
        class="_button_10a2c6 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - AFP - født før 1963 og og fylt 67 år, eller født før 1963 og har vedtak om alderspensjon > rendrer slik den skal når afp ikke er oppgitt 2`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
    data-testid="afp-privat"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.afpPrivat.title
      </h2>
      <p
        class="navds-body-long navds-body-long--large"
      >
        stegvisning.afp.ingress
      </p>
      <div
        class="navds-read-more navds-read-more--medium _readmorePrivat_10a2c6 navds-read-more--open"
        data-volume="low"
      >
        <button
          aria-expanded="true"
          class="navds-read-more__button navds-body-short"
          data-state="open"
          data-testid="om_livsvarig_AFP_i_privat_sektor"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Om livsvarig AFP i privat sektor
          </span>
        </button>
        <div
          aria-hidden="false"
          class="navds-read-more__content navds-body-long navds-body-long--medium"
          data-state="open"
        >
          <p>
            Lorem
          </p>
        </div>
      </div>
      <fieldset
        aria-required="true"
        class="_radiogroup_10a2c6 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.afpPrivat.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r5"
              class="navds-radio__input"
              id="radio-r4"
              name="afp"
              type="radio"
              value="ja_privat"
            />
            <label
              class="navds-radio__label"
              for="radio-r4"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r5"
                >
                  stegvisning.radio_ja
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r8"
              class="navds-radio__input"
              id="radio-r7"
              name="afp"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-r7"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r8"
                >
                  stegvisning.radio_nei
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r3"
        />
      </fieldset>
      <button
        class="_button_10a2c6 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - AFP - født før 1963 og og fylt 67 år, eller født før 1963 og har vedtak om alderspensjon > rendrer slik den skal når afp ikke er oppgitt 3`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
    data-testid="afp-privat"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.afpPrivat.title
      </h2>
      <p
        class="navds-body-long navds-body-long--large"
      >
        stegvisning.afp.ingress
      </p>
      <div
        class="navds-read-more navds-read-more--medium _wrapper_11f63f _readmorePrivat_10a2c6 navds-read-more--open"
        data-volume="low"
      >
        <button
          aria-expanded="true"
          class="navds-read-more__button navds-body-short"
          data-state="open"
          data-testid="om_livsvarig_AFP_i_privat_sektor"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Om livsvarig AFP i privat sektor
          </span>
        </button>
        <div
          aria-hidden="false"
          class="navds-read-more__content navds-body-long navds-body-long--medium"
          data-state="open"
        >
          <p>
            Lorem
          </p>
        </div>
      </div>
      <fieldset
        aria-required="true"
        class="_radiogroup_10a2c6 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.afpPrivat.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r5"
              class="navds-radio__input"
              id="radio-r4"
              name="afp"
              type="radio"
              value="ja_privat"
            />
            <label
              class="navds-radio__label"
              for="radio-r4"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r5"
                >
                  stegvisning.radio_ja
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r8"
              class="navds-radio__input"
              id="radio-r7"
              name="afp"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-r7"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r8"
                >
                  stegvisning.radio_nei
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r3"
        />
      </fieldset>
      <button
        class="_button_10a2c6 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;
